<resources>
    <string name="app_name" translatable="false">Caffeinate</string>

    <string name="caffeinate_tile_label">Caffeinate</string>
    <string name="soundprofile_tile_label_vibrate">Vibrate</string>
    <string name="soundprofile_tile_label_ringer">Normal</string>

    <string name="sound_dialog_dnd_error_title">Warning: DND Is Active</string>
    <string name="sound_dialog_dnd_error_message">Because DND is active, your sound state cannot be changed at this time. Please disable DND mode and retry.\n\nYou can also grant Caffeinate permission to modify your DND state by clicking \"Grant Permission\".</string>

    <string name="caffeination_in_progress">Caffeinate is running, your display will remain active until the timer (%1$s) hits zero. Tap to visit settings.</string>
    <string name="caffeination_in_progress_infinite">Caffeinate is running, your display will remain active until you click cancel, or lock your screen. Tap to visit settings.</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Preference Header Strings -->
    <string name="pref_header_general">General</string>
    <string name="pref_header_caffeine">Caffeine Tile</string>
    <string name="pref_caffeine_time_limit">Sets how long the Caffeination process will start from.</string>

    <string name="menu_entry_settings">Settings</string>
    <string name="setting_summary_notificationtest">Force enable persistent notification (As an attempt to keep the tile running)</string>
    <string name="setting_title_notificationtest">Force Opt-In to Notification A/B test</string>
    <string name="tile_sound_label">Sound Profile</string>
    <string name="pref_caffeine_timelimit_title">Default Screen Timeout</string>
    <string name="pref_caffeine_timelimit_title_extended">Default Screen Timeout</string>
    <string name="pref_caffeine_screen_dimming_title">Allow screen to dim</string>
    <string name="pref_caffeine_screen_dimming_title_extended">When enabled, screen brightness is heavily reduced after the built-in system\'s \"Screen Timeout\" setting.</string>

    <string name="introduction_caffeinate">Welcome! \n Caffeinate operates via your Quick Settings.</string>
    <string name="introduction_caffeinate_settings_hint">Caffeinate also has its own settings! Click the menu button above to take a peek.</string>

    <string name="summary_launcher_icon_warning">Warning: Turning this off will make it impossible to launch the app from your home screen/Play Store.\n\nYou will need to start Caffeinating, and then click the notification to return here.</string>
    <string name="caffeinate_tile_reset_state_hint">Hint: If Caffeinate gets stuck, try removing the tile from your quick settings, and re-add it, in order to reset it\'s state!</string>


    <string name="title_activity_credits">Credits</string>
    <string name="credits_header">Thank you translators!</string>
    <string name="credits_description">Caffeinate has been translated to various languages by the following volunteers:</string>
    <string name="menu_entry_credits">Credits</string>
    <string name="credits_item_contributors">Contributors:</string>

    <string name="notification_caffeinate_title">Caffeination in progress…</string>
    <string name="notification_caffeinate_action_cancel">Cancel</string>
    <string name="notification_caffeinate_action_infinite">Switch to Infinite</string>
    <string name="notification_caffeinate_action_timer_reset">Switch to Timer</string>

    <string name="notification_channel_caffeination_title">Caffeination Status</string>
    <string name="notification_channel_caffeination_description">This notification is shown when Caffeinate is active.</string>


    <string name="credits_invitation_text">If you\'d like to help translate Caffeinate to your language, <a href='https://poeditor.com/join/project/ZYB37nK4gR'>click here</a>. Your help is greatly appreciated!</string>
    <string name="pref_caffeine_instant_infinite_title">Skip To Infinite Mode</string>
    <string name="pref_caffeine_instant_infinite_summary">When enabled, Caffeinate\'s countdown will be skipped, and will go straight to infinity mode. This option is only effective when Caffeinate has notification permissions, so that you do not accidentally forget that infinity mode is active.</string>
    <string name="credits_unavailable">Credit contents are temporarily unavailable, and will return in a future release!</string>

    <string name="notification_request_permission_warning">Caffeinate requires your permission to send you notifications about it\'s on-going status!</string>
    <string name="notification_request_permission_option_allow">Sure!</string>
    <string name="notification_request_permission_option_deny">No thanks!</string>
    <string name="pref_caffeine_max_timer">Timer Maximum Value</string>
    <string name="pref_caffeine_max_timer_description">Sets the maximum timer that the Caffeine tile will reach when tapping it to extend the timer, specified in minutes (default value is 60 minutes). After this value, Caffeinate will enter infinity mode.</string>
    <string name="pref_caffeine_max_timer_popup">Enter maximum value in minutes</string>

</resources>
