<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="caffeine_time_limit"
        android:title="@string/pref_caffeine_timelimit_title"
        android:dialogTitle="@string/pref_caffeine_timelimit_title_extended"
        android:entries="@array/pref_caffeine_timelimits"
        android:entryValues="@array/pref_caffeine_timelimits_values"
        android:summary="@string/pref_caffeine_time_limit"
        android:defaultValue="300000" />

    <EditTextPreference
        android:key="caffeine_timer_increment_val"
        android:title="Timer Increment Value"
        android:summary="Sets how long tapping the Caffeine tile will increase the timer by (specified in seconds, default is 5 minutes)."
        android:dialogMessage="Enter increment value in seconds"
        android:inputType="number"
        android:defaultValue="300" />

    <SwitchPreference
        android:key="caffeine_screen_dimming"
        android:title="@string/pref_caffeine_screen_dimming_title"
        android:summary="@string/pref_caffeine_screen_dimming_title_extended"
        android:defaultValue="false" />

    <SwitchPreference
        android:key="caffeine_instant_infinite_toggle"
        android:title="@string/pref_caffeine_instant_infinite_title"
        android:summary="@string/pref_caffeine_instant_infinite_summary"
        android:defaultValue="false" />


</PreferenceScreen>